# gigaChat

./: .coveragerc  .dockerignore  .editorconfig  .env.docker  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  OPERATIONS.md  README.md  SECURITY.md  SETUP_PROGRESS.md  TROUBLESHOOTING.md  alembic.ini  docker-compose.observability.yml  docker-compose.yml  justfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_no_llama.txt  setup.cfg  start.cmd
.github/: changelog-config.json
.github/workflows/: cd.yml  ci.yml  tests.yml
app/: main.py
app/api/: auth.py  chat.py  conversations.py
app/api/endpoints/: chat.py  conversation.py  i18n.py  moderation.py  search.py
app/core/: ai.py  authorization.py  config.py  database.py  files.py  i18n.py  llm.py  moderation.py  oauth.py  observability.py  rl.py  security.py  security_middleware.py  vector_store.py  webauthn.py
app/frontend/: app.py
app/frontend/templates/: chat.html
app/i18n/: en.json  es.json  fr.json
app/models/: auth.py  conversation.py  models.py
config/: grafana.ini  loki-config.yaml  prometheus.yml  promtail-config.yaml
docs/: GOD_GUIDE.md  STEPS_TAKEN.md  WORKFLOW_WALKTHROUGH.md
migrations/versions/: 001_initial.py
requirements/: base.txt  dev.txt  prod.txt  test.txt
scripts/: bootstrap.ps1  bootstrap.sh
tests/: config.py  conftest.py  conftest.py.old  helpers.py  test_health.py
tests/unit/: test_auth.py  test_chat.py  test_conversations.py  test_files.py  test_user_profile.py
(+2 files in other folders)
