[tool.poetry]
name = "gigachat"
version = "1.3.0"
description = "A free and open-source ChatGPT-like conversational web app"
authors = ["linkmeAman <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.110.0"
uvicorn = "0.27.1"
sqlalchemy = "2.0.27"
alembic = "1.13.1"
redis = "5.0.1"
pyseto = "1.7.5"
bcrypt = "4.1.2"
transformers = "^4.32.0"
torch = "2.2.1"
python-dotenv = "1.0.1"
pydantic = "2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.0"
pytest-cov = "4.1.0"
black = "24.2.0"
mypy = "1.8.0"
ruff = "0.2.2"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B", "I"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "redis.*",
    "minio.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B105"]